# server

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  main.cpp
src/: calc_request.hpp  server.cpp  server.hpp  talk_to_client.cpp  talk_to_client.hpp
